# serializer version: 1
# name: test_add_and_delete_event
  list([
    dict({
      'created': '2022-09-03T09:38:05',
      'dtend': '2022-08-29T09:30:00',
      'dtstamp': '2022-09-03T09:38:05',
      'dtstart': '2022-08-29T09:00:00',
      'sequence': 0,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_add_and_delete_todo[status0]
  list([
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:00:00',
      'sequence': 0,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_add_and_delete_todo[status1]
  list([
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:00:00',
      'sequence': 0,
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_add_and_delete_todo[status2]
  list([
    dict({
      'completed': '2022-09-03T09:38:05+00:00',
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:00:00',
      'sequence': 0,
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_add_and_delete_todo[status3]
  list([
    dict({
      'completed': '2020-01-01T00:00:00+00:00',
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:00:00',
      'sequence': 0,
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---  
# name: test_convert_single_instance_to_recurring
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'summary': 'Daily meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_convert_single_instance_to_recurring.1
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Daily meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-08-30T09:00:00',
      'recurrence_id': '20220830T090000',
      'summary': 'Daily meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-08-31T09:00:00',
      'recurrence_id': '20220831T090000',
      'summary': 'Daily meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_all_day_event
  list([
    dict({
      'created': '2022-09-03T09:38:05',
      'dtend': '2022-08-29',
      'dtstamp': '2022-09-03T09:38:05',
      'dtstart': '2022-08-29',
      'sequence': 0,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_all_day_recurring
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05',
      'recurrence_id': '20220905',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_all_day_recurring.1
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_event_parent_cascade_to_children
  list([
    'mock-uid-1',
    'mock-uid-2',
    'mock-uid-3',
    'mock-uid-4',
  ])
# ---
# name: test_delete_event_parent_cascade_to_children.1
  list([
    'mock-uid-4',
  ])
# ---
# name: test_delete_instance_in_todo_series
  list([
    tuple(
      '2024-01-09',
      None,
      Recur(freq=<Frequency.DAILY: 'DAILY'>, until=None, count=10, interval=1, by_weekday=[], by_month_day=[], by_month=[], by_setpos=[]),
    ),
  ])
# ---
# name: test_delete_instance_in_todo_series.1
  list([
    tuple(
      '2024-01-09',
      '20240109',
      None,
      list([
      ]),
    ),
    tuple(
      '2024-01-09',
      None,
      Recur(freq=<Frequency.DAILY: 'DAILY'>, until=None, count=10, interval=1, by_weekday=[], by_month_day=[], by_month=[], by_setpos=[]),
      list([
        FakeDate(2024, 1, 9),
      ]),
    ),
  ])
# ---
# name: test_delete_instance_in_todo_series.2
  list([
    tuple(
      '2024-01-09',
      '20240109',
      None,
      list([
      ]),
    ),
    tuple(
      '2024-01-09',
      None,
      Recur(freq=<Frequency.DAILY: 'DAILY'>, until=None, count=10, interval=1, by_weekday=[], by_month_day=[], by_month=[], by_setpos=[]),
      list([
        FakeDate(2024, 1, 9),
        FakeDate(2024, 1, 10),
      ]),
    ),
  ])
# ---
# name: test_delete_instance_in_todo_series.3
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_instance_in_todo_series.4
  list([
    dict({
      'due': '2024-01-12',
      'recurrence_id': '20240111',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_instance_in_todo_series.5
  list([
    dict({
      'due': '2024-01-13',
      'recurrence_id': '20240112',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_parent_todo_cascade_to_children
  list([
    'mock-uid-1',
    'mock-uid-2',
    'mock-uid-3',
    'mock-uid-4',
  ])
# ---
# name: test_delete_parent_todo_cascade_to_children.1
  list([
    'mock-uid-4',
  ])
# ---
# name: test_delete_this_and_future_all_day_event[recur0]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05',
      'recurrence_id': '20220905',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_this_and_future_all_day_event[recur1]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05',
      'recurrence_id': '20220905',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Mondays',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_this_and_future_event[recur0]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_delete_this_and_future_event[recur1]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_deletel_partial_recurring_event[recur0]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_deletel_partial_recurring_event[recur1]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_event
  list([
    dict({
      'created': '2022-09-03T09:38:05',
      'dtend': '2022-08-29T09:30:00',
      'dtstamp': '2022-09-03T09:38:05',
      'dtstart': '2022-08-29T09:00:00',
      'sequence': 0,
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_event.1
  list([
    dict({
      'created': '2022-09-03T09:38:05',
      'dtend': '2022-08-29T09:30:00',
      'dtstamp': '2022-09-03T09:38:15',
      'dtstart': '2022-08-29T09:05:00',
      'last_modified': '2022-09-03T09:38:15',
      'sequence': 1,
      'summary': 'Monday meeting (Delayed)',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurrence_rule_this_and_future
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-19T09:00:00',
      'recurrence_id': '20220919T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurrence_rule_this_and_future_all_day_first_instance
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26',
      'recurrence_id': '20220926',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurrence_rule_this_and_future_first_instance
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_all_day_event_instance[recur0]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'sequence': 0,
      'summary': 'Monday event',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06',
      'recurrence_id': '20220905',
      'sequence': 1,
      'summary': 'Tuesday event',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'sequence': 0,
      'summary': 'Monday event',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_all_day_event_instance[recur1]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'sequence': 0,
      'summary': 'Monday event',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06',
      'recurrence_id': '20220905',
      'sequence': 1,
      'summary': 'Tuesday event',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'sequence': 0,
      'summary': 'Monday event',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_all_day_event_this_and_future[recur0]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Monday',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05',
      'recurrence_id': '20220905',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_all_day_event_this_and_future[recur1]
  list([
    dict({
      'dtstart': '2022-08-29',
      'recurrence_id': '20220829',
      'summary': 'Monday',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05',
      'recurrence_id': '20220905',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12',
      'recurrence_id': '20220912',
      'summary': 'Mondays [edit]',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event[recur0]
  list([
    dict({
      'dtstart': '2022-08-30T09:00:00',
      'recurrence_id': '20220830T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06T09:00:00',
      'recurrence_id': '20220906T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-13T09:00:00',
      'recurrence_id': '20220913T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event[recur1]
  list([
    dict({
      'dtstart': '2022-08-30T09:00:00',
      'recurrence_id': '20220830T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06T09:00:00',
      'recurrence_id': '20220906T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-13T09:00:00',
      'recurrence_id': '20220913T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event_instance[recur0]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event_instance[recur1]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event_this_and_future[recur0]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_event_this_and_future[recur1]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Team meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_recurring_with_same_rrule
  list([
    dict({
      'dtstart': '2022-08-30T09:00:00',
      'recurrence_id': '20220830T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-06T09:00:00',
      'recurrence_id': '20220906T090000',
      'summary': 'Tuesday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_edit_todo
  list([
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:00:00',
      'sequence': 0,
      'summary': 'Monday morning items',
      'uid': 'mock-uid-1',
    }),
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-29T09:00:00',
      'due': '2022-08-30T09:00:00',
      'sequence': 0,
      'summary': 'Tuesday morning items',
      'uid': 'mock-uid-2',
    }),
  ])
# ---
# name: test_edit_todo.1
  list([
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:15+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:05:00',
      'last_modified': '2022-09-03T09:38:15+00:00',
      'sequence': 1,
      'summary': 'Monday morning items (Delayed)',
      'uid': 'mock-uid-1',
    }),
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-29T09:00:00',
      'due': '2022-08-30T09:00:00',
      'sequence': 0,
      'summary': 'Tuesday morning items',
      'uid': 'mock-uid-2',
    }),
  ])
# ---
# name: test_edit_todo.2
  list([
    dict({
      'completed': '2022-09-03T09:38:25+00:00',
      'created': '2022-09-03T09:38:15+00:00',
      'dtstamp': '2022-09-03T09:38:25+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:05:00',
      'last_modified': '2022-09-03T09:38:25+00:00',
      'sequence': 2,
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Monday morning items (Delayed)',
      'uid': 'mock-uid-1',
    }),
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-29T09:00:00',
      'due': '2022-08-30T09:00:00',
      'sequence': 0,
      'summary': 'Tuesday morning items',
      'uid': 'mock-uid-2',
    }),
  ])
# ---
# name: test_edit_todo.3
  list([
    dict({
      'created': '2022-09-03T09:38:25+00:00',
      'dtstamp': '2022-09-03T09:38:35+00:00',
      'dtstart': '2022-08-28T09:00:00',
      'due': '2022-08-29T09:05:00',
      'last_modified': '2022-09-03T09:38:35+00:00',
      'sequence': 3,
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Monday morning items (Delayed)',
      'uid': 'mock-uid-1',
    }),
    dict({
      'created': '2022-09-03T09:38:05+00:00',
      'dtstamp': '2022-09-03T09:38:05+00:00',
      'dtstart': '2022-08-29T09:00:00',
      'due': '2022-08-30T09:00:00',
      'sequence': 0,
      'summary': 'Tuesday morning items',
      'uid': 'mock-uid-2',
    }),
  ])
# ---
# name: test_modify_todo_rrule_for_this_and_future[2024-01-05]
  list([
    dict({
      'due': '2024-01-07',
      'recurrence_id': '20240106',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Wash car (Sa)',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_modify_todo_rrule_for_this_and_future[2024-01-12]
  list([
    dict({
      'due': '2024-01-07',
      'recurrence_id': '20240106',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Wash car (Sa)',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_modify_todo_rrule_for_this_and_future[2024-01-19]
  list([
    dict({
      'due': '2024-01-14',
      'recurrence_id': '20240113',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Wash car (Sa)',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_modify_todo_rrule_for_this_and_future[2024-01-26]
  list([
    dict({
      'due': '2024-01-22',
      'recurrence_id': '20240121',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Wash car (Su)',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_modify_todo_rrule_for_this_and_future[ics]
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:20220903T093805Z
  UID:mock-uid-1
  CREATED:20220903T093805Z
  DTSTART:20240121
  DUE:20240122
  LAST-MODIFIED:20220903T093805Z
  RECURRENCE-ID:20240120
  RRULE:FREQ=WEEKLY;COUNT=8;BYDAY=SU
  SEQUENCE:1
  STATUS:NEEDS-ACTION
  SUMMARY:Wash car (Su)
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20220903T093805Z
  UID:mock-uid-1
  CREATED:20220903T093805Z
  DTSTART:20240106
  DUE:20240107
  LAST-MODIFIED:20220903T093805Z
  RRULE:FREQ=WEEKLY;UNTIL=20240119;BYDAY=SA
  SEQUENCE:0
  STATUS:NEEDS-ACTION
  SUMMARY:Wash car (Sa)
  END:VTODO
  END:VCALENDAR
  '''
# ---
# name: test_recurring_event[start0-end0-recur0]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-19T09:00:00',
      'recurrence_id': '20220919T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_event[start1-end1-recur1]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-19T09:00:00',
      'recurrence_id': '20220919T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_event[start2-end2-recur2]
  list([
    dict({
      'dtstart': '2022-08-29T09:00:00-07:00',
      'recurrence_id': '20220829T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-05T09:00:00-07:00',
      'recurrence_id': '20220905T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-12T09:00:00-07:00',
      'recurrence_id': '20220912T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-19T09:00:00-07:00',
      'recurrence_id': '20220919T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
    dict({
      'dtstart': '2022-09-26T09:00:00-07:00',
      'recurrence_id': '20220926T090000',
      'summary': 'Monday meeting',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_series.3
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  COMPLETED:20240109T100005Z
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240109T100005Z
  RRULE:FREQ=DAILY;COUNT=10
  SEQUENCE:1
  STATUS:COMPLETED
  SUMMARY:Walk dog
  END:VTODO
  END:VCALENDAR
  '''
# ---
# name: test_recurring_todo_item_edit_series[completed]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_series[initial]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_series[next_instance]
  list([
    dict({
      'due': '2024-01-11',
      'recurrence_id': '20240110',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[completed]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[deleted_series_ics]
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  END:VCALENDAR
  '''
# ---
# name: test_recurring_todo_item_edit_single[initial]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[next_instance]
  list([
    dict({
      'due': '2024-01-11',
      'recurrence_id': '20240110',
      'status': <TodoStatus.NEEDS_ACTION: 'NEEDS-ACTION'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[next_instance_completed]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240110',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk cat',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[next_instance_deleted]
  list([
    dict({
      'due': '2024-01-10',
      'recurrence_id': '20240109',
      'status': <TodoStatus.COMPLETED: 'COMPLETED'>,
      'summary': 'Walk dog',
      'uid': 'mock-uid-1',
    }),
  ])
# ---
# name: test_recurring_todo_item_edit_single[next_instance_deleted_ics]
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  COMPLETED:20240109T100005Z
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240109T100005Z
  RECURRENCE-ID:20240109
  SEQUENCE:1
  STATUS:COMPLETED
  SUMMARY:Walk dog
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  RRULE:FREQ=DAILY;COUNT=10
  EXDATE:20240109
  EXDATE:20240110
  SEQUENCE:0
  STATUS:NEEDS-ACTION
  SUMMARY:Walk dog
  END:VTODO
  END:VCALENDAR
  '''
# ---
# name: test_recurring_todo_item_edit_single[result_ics]
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  COMPLETED:20240109T100005Z
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240109T100005Z
  RECURRENCE-ID:20240109
  SEQUENCE:1
  STATUS:COMPLETED
  SUMMARY:Walk dog
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20240110T100000Z
  UID:mock-uid-1
  COMPLETED:20240110T100000Z
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240110T100000Z
  RECURRENCE-ID:20240110
  EXDATE:20240109
  SEQUENCE:1
  STATUS:COMPLETED
  SUMMARY:Walk dog
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  RRULE:FREQ=DAILY;COUNT=10
  EXDATE:20240109
  EXDATE:20240110
  SEQUENCE:0
  STATUS:NEEDS-ACTION
  SUMMARY:Walk dog
  END:VTODO
  END:VCALENDAR
  '''
# ---
# name: test_recurring_todo_item_edit_single[result_ics_modified]
  '''
  BEGIN:VCALENDAR
  PRODID:-//example//1.2.3
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  COMPLETED:20240109T100005Z
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240109T100005Z
  RECURRENCE-ID:20240109
  SEQUENCE:1
  STATUS:COMPLETED
  SUMMARY:Walk dog
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20240110T100000Z
  UID:mock-uid-1
  COMPLETED:20240110T100000Z
  CREATED:20240110T100000Z
  DTSTART:20240109
  DUE:20240110
  LAST-MODIFIED:20240110T100000Z
  RECURRENCE-ID:20240110
  EXDATE:20240109
  SEQUENCE:2
  STATUS:COMPLETED
  SUMMARY:Walk cat
  END:VTODO
  BEGIN:VTODO
  DTSTAMP:20240109T100005Z
  UID:mock-uid-1
  CREATED:20240109T100005Z
  DTSTART:20240109
  DUE:20240110
  RRULE:FREQ=DAILY;COUNT=10
  EXDATE:20240109
  EXDATE:20240110
  SEQUENCE:0
  STATUS:NEEDS-ACTION
  SUMMARY:Walk dog
  END:VTODO
  END:VCALENDAR
  '''
# ---
